--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     </div>
     <div class="c_row last">
-        <span class="s_icon_container forgot_icon"> <img class="s_icon"src="icons/forgotW.png"> </span>
+        <span class="s_icon_container forgot_icon"> <img class="s_icon"src="icons/password.svg"> </span>
         <p><a href="email_page.html">Forgot password?</a></p>
     </div>
 </div>
@@ -297,19 +297,36 @@
         <div class="wrap_two">
 
      <div class="fcaption">
-               Contact
-                <ul>
-                    <li class="contact_number">+981234567890</li>
-                    <li class="email">Seliq@gmail.com</li>
-                </ul>
+        Contact
+        <ul>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/call.svg"> 
+                </span>
+                +98-7269089026
+            </li>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/email.svg"> </span>
+                Seliq@gmail.com
+            </li>
+        </ul>
     </div>
 
      <div class="fcaption">Stay Connected
-            <ul>
-                <li>
-                    <a href="http://www.facebook.com/Seliq">Facebook</a>
+        <ul>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/link.svg"> 
+                </span>
+                <a href="http://www.facebook.com/Seliq">
+                Facebook</a>
                 </li>
-                <li>
+                <li class="f_row">
+                   <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/link.svg"> 
+                </span> 
+                    
                     <a href="http://www.instagram.com/Seliq">Instagram</a>
                 </li>
             </ul>
@@ -320,7 +337,7 @@
         <div class="wrap_three">
 
             <div class="block">
-                @2019 Dasauli , Lucknow , 226026
+                @2020 Dasauli , Lucknow , 226026
             </div>
 
         </div>
