--- a/profile.html
+++ b/profile.html
@@ -131,20 +131,37 @@
         <div class="wrap_two">
 
      <div class="fcaption">
-               Contact
-                <ul>
-                    <li class="contact_number">+981234567890</li>
-                    <li class="email">Seliq@gmail.com</li>
-                </ul>
+        Contact
+        <ul>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/call.svg"> 
+                </span>
+                +98-7269089026
+            </li>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/email.svg"> </span>
+                Seliq@gmail.com
+            </li>
+        </ul>
     </div>
 
      <div class="fcaption">Stay Connected
-            <ul>
-                <li>
-                    <a href="http://www.facebook.com/StuClona">Facebook</a>
+        <ul>
+            <li class="f_row">
+                <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/link.svg"> 
+                </span>
+                <a href="http://www.facebook.com/Seliq">
+                Facebook</a>
                 </li>
-                <li>
-                    <a href="http://www.instagram.com/Stuclona">Instagram</a>
+                <li class="f_row">
+                   <span class="s_icon_container"> 
+                <img class="s_icon" src="icons/link.svg"> 
+                </span> 
+                    
+                    <a href="http://www.instagram.com/Seliq">Instagram</a>
                 </li>
             </ul>
     </div>
@@ -154,7 +171,7 @@
         <div class="wrap_three">
 
             <div class="block">
-                @2019 Dasauli , Lucknow , 226026
+                @2020 Dasauli , Lucknow , 226026
             </div>
 
         </div>
