--- a/add_item.html
+++ b/add_item.html
@@ -15,7 +15,13 @@
     <script type="text/javascript" src="js/nav.js"></script>
 
     <!--    Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Bebas+Neue&family=Carter+One&family=Staatliches&family=Josefin+Sans&family=Lato:wght@400;700;900&family=Lobster&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Oswald:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?
+family=Poppins
+&family=Lobster
+&family=Staatliches
+&family=Open+Sans:wght@400;600
+&family=Roboto  
+&display=swap" rel="stylesheet">
 
 </head>
 
@@ -55,14 +61,12 @@
         </ul>
 </nav>
 
-        
+<!--       Main Section          -->
 
-        <!--       Main Section          -->
-<main>
-    <div class="body_section">
+<main class="body_section">
 
         <div class="heading">
-            <h2>Add your item</h2>
+            <h1>Add your item</h1>
         </div>
 
         <form class="fcontainer">
@@ -70,19 +74,17 @@
             <div class="row">
                 <div class="caption">Product Title</div>
 
-                <input type="text" placeholder="Enter the product title" class="textbox w100">
+                <input type="text" placeholder="Enter the product title" class="w100">
             </div>
 
             <div class="row">
                 <div class="caption">Product Description</div>
 
-                <textarea rows="5" class="desc_box w100">
-              </textarea>
+                <textarea rows="6" class="desc_box w100"></textarea>
             </div>
 
             <div class="row">
-                <div class="caption">Add image</div>
-
+                <div class="caption">Add Image</div>
                 <input type="file" accept="image/">
             </div>
 
@@ -91,7 +93,6 @@
             </submit>
 
         </form>
-    </div>
 
 </main>
 
