--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <script type="text/javascript" src="js/nav.js"></script>
 
     <!--    Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Bebas+Neue&family=Carter+One&family=Staatliches&family=Josefin+Sans&family=Lato:wght@400;700;900&family=Lobster&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Oswald:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?
+family=Poppins
+&family=Lobster
+&family=Staatliches
+&family=Open+Sans:wght@400;600
+&family=Roboto  
+&display=swap" rel="stylesheet">
 
 </head>
 
